Добавить/обновить тесты в новой версии кода